--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -5,28 +5,28 @@
 # Files and directories #######################################################
 #
 # This setting controls the top directory which MPD will search to discover the
-# available audio files and add them to the daemon's online database. This 
+# available audio files and add them to the daemon's online database. This
 # setting defaults to the XDG directory, otherwise the music directory will be
 # be disabled and audio files will only be accepted over ipc socket (using
 # file:// protocol) or streaming files over an accepted protocol.
 #
-music_directory		"/home/josh/Music"
+music_directory		"~/Music"
 #
 # This setting sets the MPD internal playlist directory. The purpose of this
-# directory is storage for playlists created by MPD. The server will use 
+# directory is storage for playlists created by MPD. The server will use
 # playlist files not created by the server but only if they are in the MPD
 # format. This setting defaults to playlist saving being disabled.
 #
-playlist_directory		"/home/josh/.config/mpd/playlists"
+playlist_directory		"~/.config/mpd/playlists"
 #
 # This setting sets the location of the MPD database. This file is used to
-# load the database at server start up and store the database while the 
+# load the database at server start up and store the database while the
 # server is not up. This setting defaults to disabled which will allow
 # MPD to accept files over ipc socket (using file:// protocol) or streaming
 # files over an accepted protocol.
 #
-db_file			"/home/josh/.config/mpd/mpd.db"
-# 
+db_file			"~/.config/mpd/mpd.db"
+#
 # These settings are the locations for the daemon log files for the daemon.
 # These logs are great for troubleshooting, depending on your log_level
 # settings.
@@ -34,25 +34,25 @@ db_file			"/home/josh/.config/mpd/mpd.db"
 # The special value "syslog" makes MPD use the local syslog daemon. This
 # setting defaults to logging to syslog.
 #
-log_file			"/home/josh/.config/mpd/mpd.log"
+#log_file			"~/.mpd/log"
 #
 # This setting sets the location of the file which stores the process ID
 # for use of mpd --kill and some init scripts. This setting is disabled by
 # default and the pid file will not be stored.
 #
-pid_file			"/home/josh/.config/mpd/mpd.pid"
+pid_file			"~/.config/mpd/mpd.pid"
 #
 # This setting sets the location of the file which contains information about
 # most variables to get MPD back into the same general shape it was in before
-# it was brought down. This setting is disabled by default and the server 
+# it was brought down. This setting is disabled by default and the server
 # state will be reset on server start up.
 #
-state_file			"/home/josh/.config/mpd/mpdstate"
+state_file			"~/.config/mpd/mpdstate"
 #
 # The location of the sticker database.  This is a database which
 # manages dynamic information attached to songs.
 #
-sticker_file			"/home/josh/.config/mpd/sticker.sql"
+#sticker_file			"~/.mpd/sticker.sql"
 #
 ###############################################################################
 
@@ -64,7 +64,7 @@ sticker_file			"/home/josh/.config/mpd/sticker.sql"
 # initialization. This setting is disabled by default and MPD is run as the
 # current user.
 #
-user				"josh"
+#user				"nobody"
 #
 # This setting specifies the group that MPD will run as. If not specified
 # primary group of user specified with "user" setting will be used (if set).
@@ -74,27 +74,26 @@ user				"josh"
 #group				"nogroup"
 #
 # This setting sets the address for the daemon to listen on. Careful attention
-# should be paid if this is assigned to anything other then the default, any.
+# should be paid if this is assigned to anything other than the default, any.
 # This setting can deny access to control of the daemon. Not effective if
 # systemd socket activiation is in use.
 #
 # For network
-bind_to_address			"127.0.0.1"
+bind_to_address		"127.0.0.1"
 #
 # And for Unix Socket
-#bind_to_address		"~/.config/mpd/mpd.socket"
+#bind_to_address		"~/.mpd/socket"
 #
 # This setting is the TCP port that is desired for the daemon to get assigned
 # to.
 #
 port				"6600"
 #
-# This setting controls the type of information which is logged. Available 
-# setting arguments are "default", "secure" or "verbose". The "verbose" setting
-# argument is recommended for troubleshooting, though can quickly stretch
-# available resources on limited hardware storage.
+# Suppress all messages below the given threshold.  Use "verbose" for
+# troubleshooting. Available setting arguments are "notice", "info", "verbose",
+# "warning" and "error".
 #
-log_level			"verbose"
+#log_level			"notice"
 #
 # Setting "restore_paused" to "yes" puts MPD into pause mode instead
 # of starting playback after startup.
@@ -115,7 +114,7 @@ restore_paused "yes"
 # the other supported tags:
 #metadata_to_use "+comment"
 #
-# This setting enables automatic update of MPD's database when files in 
+# This setting enables automatic update of MPD's database when files in
 # music_directory are changed.
 #
 #auto_update	"yes"
@@ -130,7 +129,7 @@ restore_paused "yes"
 
 # Symbolic link behavior ######################################################
 #
-# If this setting is set to "yes", MPD will discover audio files by following 
+# If this setting is set to "yes", MPD will discover audio files by following
 # symbolic links outside of the configured music_directory.
 #
 #follow_outside_symlinks	"yes"
@@ -165,7 +164,7 @@ restore_paused "yes"
 #
 #password                        "password@read,add,control,admin"
 #
-# This setting specifies the permissions a user has who has not yet logged in. 
+# This setting specifies the permissions a user has who has not yet logged in.
 #
 #default_permissions             "read,add,control,admin"
 #
@@ -174,7 +173,18 @@ restore_paused "yes"
 
 # Database #######################################################################
 #
-
+# An example of a database section instead of the old 'db_file' setting.
+# It enables mounting other storages into the music directory.
+#
+#database {
+#       plugin "simple"
+#       path "~/.local/share/mpd/db
+#       cache_directory "~/.local/share/mpd/cache"
+#}
+#
+# An example of database config for a sattelite setup
+#
+#music_directory "nfs://fileserver.local/srv/mp3"
 #database {
 #       plugin "proxy"
 #       host "other.mpd.host"
@@ -183,7 +193,6 @@ restore_paused "yes"
 
 # Input #######################################################################
 #
-
 input {
         plugin "curl"
 #       proxy "proxy.isp.com:8080"
@@ -196,8 +205,8 @@ input {
 
 # Audio Output ################################################################
 #
-# MPD supports various audio output types, as well as playing through multiple 
-# audio outputs at the same time, through multiple audio_output settings 
+# MPD supports various audio output types, as well as playing through multiple
+# audio outputs at the same time, through multiple audio_output settings
 # blocks. Setting this block is optional, though the server will only attempt
 # autodetection for one sound card.
 #
@@ -277,19 +286,18 @@ input {
 #
 audio_output {
 	type		"pulse"
-	name		"Pulse Out"
+	name		"My Pulse Output"
 ##	server		"remote_server"		# optional
 ##	sink		"remote_server_sink"	# optional
+##	media_role	"media_role"		#optional
+}
+audio_output {
+    type                    "fifo"
+    name                    "my_fifo"
+    path                    "/tmp/mpd.fifo"
+    format                  "44100:16:2"
 }
 #
-
-audio_output {
-	type            "fifo"
-	name            "my_fifo"
-	path            "/tmp/mpd.fifo"
-	format          "44100:16:2"
-}
-
 # An example of a winmm output (Windows multimedia API).
 #
 #audio_output {
@@ -299,6 +307,20 @@ audio_output {
 #		or
 ##	device		"0"		# optional
 ##	mixer_type	"hardware"	# optional
+#}
+#
+# An example of a wasapi output (Windows multimedia API).
+#
+#audio_output {
+#	type		"wasapi"
+#	name		"My WASAPI output"
+##	device		"Digital Audio (S/PDIF) (High Definition Audio Device)" # optional
+#		or
+##	device		"0"		# optional
+## Exclusive mode blocks all other audio source, and get best audio quality without resampling.
+##	exclusive	"no"		# optional
+## Enumerate all devices in log.
+##	enumerate	"no"		# optional
 #}
 #
 # An example of an openal output.
@@ -356,7 +378,8 @@ audio_output {
 # the argument "off", "album", "track" or "auto". "auto" is a special mode that
 # chooses between "track" and "album" depending on the current state of
 # random playback. If random playback is enabled then "track" mode is used.
-# See <http://www.replaygain.org> for more details about ReplayGain.
+# See <https://wiki.hydrogenaud.io/index.php?title=Replaygain> for
+# more details about ReplayGain.
 # This setting is off by default.
 #
 #replaygain			"album"
@@ -381,7 +404,7 @@ audio_output {
 #replaygain_limit		"yes"
 #
 # This setting enables on-the-fly normalization volume adjustment. This will
-# result in the volume of all playing audio to be adjusted so the output has 
+# result in the volume of all playing audio to be adjusted so the output has
 # equal "loudness". This setting is disabled by default.
 #
 #volume_normalization		"no"
@@ -390,7 +413,7 @@ audio_output {
 
 # Character Encoding ##########################################################
 #
-# If file or directory names do not display correctly for your locale then you 
+# If file or directory names do not display correctly for your locale then you
 # may need to modify this setting.
 #
 #filesystem_charset		"UTF-8"
