--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -1,4 +1,4 @@
-#% egrep -v '^#' ~/.config/ncmpcpp/config
+#% egrep -v '^#' /home/josh/.config/ncmpcpp/config
 mpd_music_dir = "/home/josh/Music/"
 mpd_host = "127.0.0.1"
 mpd_port = "6600"
@@ -55,8 +55,6 @@ color2 = "black"
 
 #song_list_format = " $7%l  $2%t $R$5%a "
 
-#uncomment both statement's below if you want to display the albumart
-
 execute_on_song_change = "/home/josh/.config/ncmpcpp/cover.sh"
 #song_list_format = "                  $2%a $R$5%t "
 #song_list_format = "{{$2%a$9 - $4%t$9}|{$5%f$9}}{$3%l$9}                "
@@ -65,32 +63,3 @@ song_list_format = "                           $5%t$9 $7$R%a$9"
 
 song_status_format = "$b$7♫ $2%a $4⟫$3⟫ $8%t $4⟫$3⟫ $5%b "
 song_window_title_format = " {%a} - {%t}"
-
-# %l - length
-# %f - filename
-# %D - directory
-# %a - artist
-# %A - album artist
-# %t - title
-# %b - album
-# %y - date
-# %n - track number (01/12 -> 01)
-# %N - full track info (01/12 -> 01/12)
-# %g - genre
-# %c - composer
-# %p - performer
-# %d - disc
-# %C - comment
-# %P - priority
-# $R - begin right alignment
-
-# 0 - default window color (discards all other colors)
-# 1 - black
-# 2 - red
-# 3 - green
-# 4 - yellow
-# 5 - blue
-# 6 - magenta
-# 7 - cyan
-# 8 - white
-# 9 - end of current color
