updating config files

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,7 +50,7 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 # Reload configuration
-bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+bind-key r source-file ~/.tmux.conf \; display-message "OK! I'm reloaded!"
 
 # Switch panes
 bind-key -n M-h select-pane -L
@@ -163,7 +163,7 @@ set-option -g status-justify left
 
 # Right side of status bar
 set-option -g status-right-length 50
-set-option -g status-right "#[fg=brightwhite,bg=#363636] %B %_d (%a.) %l:%M %p #[fg=default,bg=default] #(whoami)@#h "
+set-option -g status-right "#[fg=brightwhite,bg=#2e3440] %B %_d (%a.) %l:%M %p #[fg=default,bg=default] #(whoami)@#h "
 
 # Pane border
 set-option -g pane-border-style bg=default,fg=brightblack
@@ -184,6 +184,6 @@ set-option -g message-style bg=default,fg=default
 source-file /home/josh/.tmuxline
 
 # Plugins
-set-option -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
-run-shell ~/.local/src/tmux-better-mouse-mode/scroll_copy_mode.tmux
-run-shell ~/.local/src/tmux-copycat/copycat.tmux
+#set-option -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
+#run-shell ~/.local/src/tmux-better-mouse-mode/scroll_copy_mode.tmux
+#run-shell ~/.local/src/tmux-copycat/copycat.tmux
