--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,262 +1,155 @@
-#################################
-#
-# Backend
-#
-#################################
-
-# Backend to use: "xrender" or "glx".
-# GLX backend is typically much faster but depends on a sane driver.
+# Settings
 backend = "glx";
-
-#################################
-#
-# GLX backend
-#
-#################################
-
 glx-no-stencil = true;
-
-# GLX backend: Copy unmodified regions from front buffer instead of redrawing them all.
-# My tests with nvidia-drivers show a 10% decrease in performance when the whole screen is modified,
-# but a 20% increase when only 1/4 is.
-# My tests on nouveau show terrible slowdown.
 glx-copy-from-front = false;
+use-damage = true;
+glx-no-rebind-pixmap = true;
 
-# GLX backend: Use MESA_copy_sub_buffer to do partial screen update.
-# My tests on nouveau shows a 200% performance boost when only 1/4 of the screen is updated.
-# May break VSync and is not available on some drivers.
-# Overrides --glx-copy-from-front.
-# glx-use-copysubbuffermesa = true;
+# Other
+mark-wmwin-focused = true;
+mark-ovredir-focused = true;
+detect-rounded-corners = true;
+detect-client-opacity = true;
+refresh-rate = 0;
+vsync = true;
+dbe = false;
+unredir-if-possible = true;
+detect-transient = true;
+detect-client-leader = true;
+invert-color-include = [ ];
 
-# GLX backend: Avoid rebinding pixmap on window damage.
-# Probably could improve performance on rapid window content changes, but is known to break things on some drivers (LLVMpipe).
-# Recommended if it works.
-# glx-no-rebind-pixmap = true;
-
-# GLX backend: GLX buffer swap method we assume.
-# Could be undefined (0), copy (1), exchange (2), 3-6, or buffer-age (-1).
-# undefined is the slowest and the safest, and the default value.
-# copy is fastest, but may fail on some drivers,
-# 2-6 are gradually slower but safer (6 is still faster than 0).
-# Usually, double buffer means 2, triple buffer means 3.
-# buffer-age means auto-detect using GLX_EXT_buffer_age, supported by some drivers.
-# Useless with --glx-use-copysubbuffermesa.
-# Partially breaks --resize-damage.
-# Defaults to undefined.
-#glx-swap-method = "undefined";
-
-#################################
-#
-# Shadows
-#
-#################################
-
-# Enabled client-side shadows on windows.
-shadow = false;
-# The blur radius for shadows. (set to 20 for good shadow)
-shadow-radius = 8;
-# The left offset for shadows. (set to 5)
-shadow-offset-x = 5;
-# The top offset for shadows. (set to 5)
-shadow-offset-y = 5;
-# The translucency for shadows. (set to 0.9)
-shadow-opacity = 0.9;
-
-# Set if you want different colour shadows
-# shadow-red = 0.0;
-# shadow-green = 0.0;
-# shadow-blue = 0.0;
-
-# The shadow exclude options are helpful if you have shadows enabled. Due to the way picom draws its shadows, certain applications will have visual glitches
-# (most applications are fine, only apps that do weird things with xshapes or argb are affected).
-# This list includes all the affected apps I found in my testing. The "! name~=''" part excludes shadows on any "Unknown" windows, this prevents a visual glitch with the XFWM alt tab switcher.
-shadow-exclude = [
-    "! name~=''",
-    "name = 'Notification'",
-    "name = 'Plank'",
-    "name = 'Docky'",
-    "name = 'Kupfer'",
-    "name = 'xfce4-notifyd'",
-    "name *= 'VLC'",
-    "name *= 'compton'",
-    "name *= 'picom'",
-    "name *= 'Chromium'",
-    "name *= 'Chrome'",
-    "class_g = 'Firefox' && argb",
-    "class_g = 'Conky'",
+corner-radius = 0.0;
+#corner-radius = 8.0;
+rounded-corners-exclude = [
+   # "widthb > 1365 && heightb > 736" # For smart gaps and a non-floating bar
+   # "class_g = 'Dunst'",
+    "class_g = 'Tooltip'",
+    "class_g = 'slop'",
+    "class_g = 'code-oss'",
+    "class_g = 'obs'",
+    "class_g = 'vlc'",
+    "class_g = 'mpv'",
+    "class_g = 'tint2'",
+    "class_g = 'Tint2'",
+    "class_g = 'Shotwell'",
+    "class_g = 'Polybar'",
     "class_g = 'polybar'",
-    "class_g = 'Kupfer'",
-    "class_g = 'Synapse'",
-    "class_g ?= 'Notify-osd'",
-    "class_g ?= 'Cairo-dock'",
-    "class_g ?= 'Xfce4-notifyd'",
-    "class_g ?= 'Xfce4-power-manager'",
-    "_GTK_FRAME_EXTENTS@:c",
-    "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+    "class_g = 'Brave-browser'",
+    "class_g = 'Google-chrome'",
+    "class_g = 'Chromium'",
+    "class_g = 'libreoffice-writer'",
+    "class_g = 'Picard'",
+    "class_g = 'Virt-manager'",
 ];
-# Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
-shadow-ignore-shaped = false;
-
-#################################
-#
-# Opacity
-#
-#################################
-
-inactive-opacity = 1;
-active-opacity = 1;
-frame-opacity = 1;
-inactive-opacity-override = false;
 
 opacity-rule = [
   "100:class_g = 'URxvt'",
+  "100:class_g = 'urxvt'",
   "100:class_g = 'Tilix'",
+  "100:class_g = 'Alacritty'",
+  "100:class_g = 'rofi'",
+  "100:class_g = 'kvantummanager'",
+  "100:class_g = 'Tooltip'",
  ];
 
-#################################
-#
 # Blur
-#
-#################################
-
-# Dim inactive windows. (0.0 - 1.0)
-inactive-dim = 0.2;
-# Do not let dimness adjust based on window opacity.
-inactive-dim-fixed = true;
-# Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
-blur-background = false;
-# Blur background of opaque windows with transparent frames as well.
-blur-background-frame = false;
-# Do not let blur radius adjust based on window opacity.
-blur-background-fixed = false;
-blur-background-exclude = [
-    "window_type = 'dock'",
-    "window_type = 'desktop'"
-];
-
-blur: {
-  method = "kawase";
+blur:
+{
+  method = "dual_kawase";
   strength = 0;
-  background = false;
-  background-frame = false;
-  background-fixed = false;
 }
 
-#################################
-#
-# Rounded Corners
-#
-#################################
-
-corner-radius = 1.0;
-rounded-corners-exclude = [
-#  "window_type = 'normal'",
-#  "class_g = 'URxvt'",
-  "class_g = 'XTerm'",
-  "class_g = 'Polybar'",
-  "class_g = 'tint2'",
-  "class_g = 'code-oss'",
-  "class_g = 'TelegramDesktop'",
-  "class_g = 'firefox'",
-  "class_g = 'Thunderbird'",
+# Add dual-kawase blur
+blur-background = false;
+blur-background-frame = false;
+blur-background-fixed = false;
+blur-kern = "3x3box";
+blur-method = "dual_kawase";
+blur-strength = 0;
+blur-background-exclude = [
+    "class_g = 'slop'",
+    "class_g = 'XAVA'",
+    "class_g = 'code-oss'",
+    "class_g = 'polybar'",
+    "class_g = 'tint2'",
+    "class_g = 'urxvt'",
+    "class_g = 'URxvt'",
+    "class_g = 'Brave-browser'",
+    "class_g = 'Peek'",
+    "class_g = 'kvantummanager'",
+    "class_g = 'Tooltip'",
+    "_GTK_FRAME_EXTENTS@:c",
+    "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
 ];
 
-#################################
-#
+# Shadow
+shadow = false;
+shadow-ignore-shaped = false;
+shadow-radius = 17;
+shadow-opacity = 0.85;
+shadow-offset-x = -5;
+shadow-offset-y = -5;
+shadow-exclude = [
+#    "! name~=''",
+    "name   *= 'VLC'",
+    "class_g = 'XAVA'",
+#    "class_g = 'Thunar'",
+    "class_g = 'mpv'",
+    "class_g = 'vlc'",
+    "class_g = 'code'",
+    "class_g = 'code-oss'",
+    "class_g = 'obs'",
+    "class_g = 'Peek'",
+#    "class_g = 'slop'",
+    "class_g = 'polybar'",
+    "class_g = 'Polybar'",
+    "class_g = 'tint2'",
+    "class_g = 'Tint2'",
+    "class_g = 'Brave-browser'",
+    "class_g = 'Google-chrome'",
+    "class_g = 'Chromium'",
+    "class_g = 'ristretto'",
+    "class_g = 'Shotwell'",
+    "class_g = 'gimp'",
+    "class_g = 'libreoffice-writer'",
+    "class_g = 'Virt-manager'",
+    "class_g = 'Picard'",
+    "class_g = 'Tooltip'",
+    "_GTK_FRAME_EXTENTS@:c",
+    "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
+];
+
 # Fading
-#
-#################################
+fading = true;
+no-fading-destroyed-argb = true;
+fade-delta = 4;
+fade-in-step = 0.75;
+fade-out-step = 0.45;
+fade-exclude = [
+    "class_g = 'slop'",
+];
 
-# Fade windows during opacity changes.
-fading = false;
-# The time between steps in a fade in milliseconds. (default 10).
-fade-delta = 20;
-# Opacity change between steps while fading in. (default 0.028).
-fade-in-step = 0.9;
-# Opacity change between steps while fading out. (default 0.03).
-fade-out-step = 0.9;
-# Fade windows in/out when opening/closing
-# no-fading-openclose = true;
-
-# Specify a list of conditions of windows that should not be faded.
-fade-exclude = [ ];
-
-#################################
-#
-# Other
-#
-#################################
-
-# Try to detect WM windows and mark them as active.
-mark-wmwin-focused = true;
-# Mark all non-WM but override-redirect windows active (e.g. menus).
-mark-ovredir-focused = true;
-# Use EWMH _NET_WM_ACTIVE_WINDOW to determine which window is focused instead of using FocusIn/Out events.
-# Usually more reliable but depends on a EWMH-compliant WM.
-use-ewmh-active-win = true;
-# Detect rounded corners and treat them as rectangular when --shadow-ignore-shaped is on.
-detect-rounded-corners = true;
-
-# Detect _NET_WM_OPACITY on client windows, useful for window managers not passing _NET_WM_OPACITY of client windows to frame windows.
-# This prevents opacity being ignored for some apps.
-# For example without this enabled my xfce4-notifyd is 100% opacity no matter what.
-detect-client-opacity = true;
-
-# Specify refresh rate of the screen.
-# If not specified or 0, picom will try detecting this with X RandR extension.
-refresh-rate = 0;
-
-# Vertical synchronization: match the refresh rate of the monitor
-vsync = true;
-
-# Enable DBE painting mode, intended to use with VSync to (hopefully) eliminate tearing.
-# Reported to have no effect, though.
-dbe = false;
-
-# Limit picom to repaint at most once every 1 / refresh_rate second to boost performance.
-# This should not be used with --vsync drm/opengl/opengl-oml as they essentially does --sw-opti's job already,
-# unless you wish to specify a lower refresh rate than the actual value.
-#sw-opti = true;
-
-# Unredirect all windows if a full-screen opaque window is detected, to maximize performance for full-screen windows, like games.
-# Known to cause flickering when redirecting/unredirecting windows.
-unredir-if-possible = false;
-
-# Specify a list of conditions of windows that should always be considered focused.
-focus-exclude = [ ];
-
-# Use WM_TRANSIENT_FOR to group windows, and consider windows in the same group focused at the same time.
-detect-transient = true;
-# Use WM_CLIENT_LEADER to group windows, and consider windows in the same group focused at the same time.
-# WM_TRANSIENT_FOR has higher priority if --detect-transient is enabled, too.
-detect-client-leader = true;
-
-#################################
-#
-# Window type settings
-#
-#################################
+#wintypes:
+#{
+#  normal = { blur-background = false; };
+#  splash = { blur-background = false; };
+#  tooltip = { fade = true; shadow = false; opacity = 1.00; };
+#};
 
 wintypes:
 {
-    tooltip =
-    {
-        # fade: Fade the particular type of windows.
-        fade = true;
-        # shadow: Give those windows shadow
-        shadow = false;
-        # opacity: Default opacity for the type of windows.
-        opacity = 0.85;
-        # focus: Whether to always consider windows of this type focused.
-        focus = true;
-    };
+  normal        = { blur-background = false; fade = true; shadow = true; opacity = 1.00; };
+  splash        = { blur-background = false; fade = false; shadow = false; opacity = 1.00; };
+  tooltip       = { blur-background = false; fade = true; shadow = false; opacity = 1.00; };
+  menu          = { blur-background = false; fade = true; shadow = true; opacity = 1.00; };
+  popup_menu    = { blur-background = false; fade = true; shadow = true; opacity = 1.00; };
+  dropdown_menu = { blur-background = false; fade = true; shadow = false; opacity = 1.00; };
+  utility       = { blur-background = false; fade = true; shadow = true; opacity = 1.00; };
+  dialog        = { blur-background = false; fade = false; shadow = true; opacity = 1.00; };
+  notify        = { blur-background = false; fade = false; shadow = true; opacity = 1.00; };
+  unknown       = { blur-background = false; fade = false; shadow = true; opacity = 1.00; };
+  dock          = { blur-background = false; fade = false; shadow = false; opacity = 1.00; };
+  dnd           = { blur-background = false; fade = false; shadow = false; opacity = 1.00; };
 };
 
-######################
-#
-# XSync
-#
-######################
 
-# Use X Sync fence to sync clients' draw calls. Needed on nvidia-drivers with GLX backend for some users.
-xrender-sync-fence = true;
