--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -33,7 +33,7 @@ set column_ratios 2,3,4
 set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
 
 # Show hidden files? You can toggle this by typing 'zh'
-set show_hidden false
+set show_hidden true
 
 # Ask for a confirmation when running the "delete" command?
 # Valid values are "always", "never", "multiple" (default)
@@ -420,7 +420,7 @@ map <END>      move to=-1
 map <PAGEDOWN> move down=1   pages=True
 map <PAGEUP>   move up=1     pages=True
 map <CR>       move right=1
-#map <DELETE>   console delete
+map <DELETE>   console delete
 map <INSERT>   console touch%space
 
 # VIM-like
