update config files

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -163,7 +163,7 @@ set-option -g status-justify left
 
 # Right side of status bar
 set-option -g status-right-length 50
-set-option -g status-right "#[fg=brightwhite,bg=#2e3440] %B %_d (%a.) %l:%M %p #[fg=default,bg=default] #(whoami)@#h "
+set-option -g status-right "#[fg=brightwhite,bg=#363636] %B %_d (%a.) %l:%M %p #[fg=default,bg=default] #(whoami)@#h "
 
 # Pane border
 set-option -g pane-border-style bg=default,fg=brightblack
