--- a/.config/polybar/align/colors.ini
+++ b/.config/polybar/align/colors.ini
@@ -1,9 +1,9 @@
 [colors]
-bg = #151515
+bg = #2e3440
 bg-alt = #232323
 bg-darker = #151515
 fg = #ffffff
-fg-alt = #687c9c
+fg-alt = #61afef
 
 blue = #2979ff
 cyan = #00e5ff
