--- a/.config/polybar/align/config.ini
+++ b/.config/polybar/align/config.ini
@@ -1,7 +1,7 @@
 include-file = /home/josh/.config/polybar/align/include-modules.ini
 
 [bar/main]
-monitor = HDMI2
+monitor = HDMI-2
 width = 100%
 height = 25
 offset-y = 0
@@ -25,7 +25,7 @@ include-file = /home/josh/.config/polybar/align/fonts.ini
 
 modules-left = title
 modules-center = workspaces
-modules-right = pulseaudio wlan temperature filesystem cpu memory powermenu
+modules-right = pulseaudio wlan temperature filesystem cpu memory
 
 tray-background = ${colors.bg}
 tray-position = none
@@ -36,7 +36,7 @@ cursor-scroll = pointer
 
 [bar/second]
 #inherit = bar/main
-monitor = HDMI1
+monitor = HDMI-1
 width = 100%
 height = 25
 offset-y = 0
@@ -60,7 +60,7 @@ include-file = /home/josh/.config/polybar/align/fonts.ini
 
 modules-left = title
 modules-center = workspaces
-modules-right = pulseaudio wlan temperature filesystem cpu memory powermenu
+modules-right = pulseaudio wlan temperature filesystem cpu memory
 
 tray-background = ${colors.bg}
 tray-position = none
