--- a/.config/polybar/align/modules/filesystem.ini
+++ b/.config/polybar/align/modules/filesystem.ini
@@ -1,7 +1,7 @@
 [module/filesystem]
 type = internal/fs
 interval = 25
-mount-0 = /home
+mount-0 = /
 ;label-mounted = %{F#0a81f5}%mountpoint%%{F-} %{F#ffffff}%percentage_used%%{F-}
 label-mounted = %{T2}HDD%{T-} %{F#ffffff}%percentage_used%%%{F-}
 label-mounted-padding = 1
