--- a/.config/polybar/Blue/config
+++ b/.config/polybar/Blue/config
@@ -1,6 +1,6 @@
 [bar/main]
 bottom = false
-monitor = HDMI1
+monitor = HDMI-1
 fixed-center = true
 width = 100%
 height = 19
@@ -22,7 +22,7 @@ include-file = ~/.config/polybar/Blue/colors
 [bar/second]
 inherit = bar/main
 ;bottom = false
-monitor = HDMI2
+monitor = HDMI-2
 modules-left = sep1 launcher sep2 workspaces3 sep1 mpd2 sep2
 modules-center = title
 modules-right = sep1 pulseaudio2 sep2 sep1 filesystem sep2 sep1 wifi sep2 sep1 temperature sep2 sep1 cpu sep2 sep1 memory sep2 sep1 powermenu sep2
@@ -229,7 +229,7 @@ format-background = ${colors.bg}
 
 [module/filesystem]
 type = internal/fs
-mount-0 = /home
+mount-0 = /
 interval = 10
 fixed-values = true
 spacing = 1
