--- a/.local/bin/config
+++ b/.local/bin/config
@@ -1,8 +1,8 @@
 #!/usr/bin/env bash
 
 # Defining the text editor to use.
-DMEDITOR="alacritty -e vim"
-THEME="/$HOME/.config/rofi/launchers/colorful/style_71.rasi"
+DMEDITOR="tilix -e vim"
+THEME="/$HOME/.config/rofi/launchers/colorful/style_999.rasi"
 
 # An array of options to choose.
 # You can edit this list to add/remove config files.
@@ -22,7 +22,8 @@ options[zsh]="$HOME/.zshrc"
 
 # Piping the above array into dmenu.
 # We use "printf '%s\n'" to format the array one item to a line.
-choice=$(printf '%s\n' "${!options[@]}" | rofi -theme $THEME -dmenu -i -p 'Which config would you like to break today?' "$@")
+#choice=$(printf '%s\n' "${!options[@]}" | rofi -theme $THEME -dmenu -i -p 'Which config would you like to screw up today?' "$@")
+choice=$(printf '%s\n' "${!options[@]}" | rofi -dmenu -i -theme $THEME -p 'Which config would you like to edit?' "$@")
 cfg=$(printf '%s\n' "${options["${choice}"]}")
 
 # What to do when/if we choose a file to edit.
@@ -31,5 +32,5 @@ if [ "$choice"  ]; then
 
 # What to do if we just escape without choosing anything.
 else
-    echo "Program terminated." && exit 0
+    exit 0
 fi
