--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # Default terminal
-set-option -g default-terminal "xterm-256color"
+set-option -g default-terminal "rxvt-256color"
 
 # Use vim key bindings
 set-option -g mode-keys vi
@@ -36,9 +36,6 @@ set-option -g renumber-windows on
 
 # No bells at all
 set-option -g bell-action none
-
-# Enable RGB color if running in xterm
-set-option -g -a terminal-overrides ",xterm-256color:Tc"
 
 # Unbind default prefix key
 unbind-key C-b
@@ -107,6 +104,22 @@ bind-key -r '>' swap-window -t +1
 unbind-key '&'
 bind-key X kill-window
 bind-key K kill-window -a
+
+# New copy
+bind -n C-h select-pane -L
+bind -n C-j select-pane -D
+bind -n C-k select-pane -U
+bind -n C-l select-pane -R
+
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind -n C-\\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Enter copy mode
 bind-key -n M-v copy-mode
@@ -183,7 +196,10 @@ set-option -g message-style bg=default,fg=default
 # Tmux Lightline
 source-file /home/josh/.tmuxline
 
-# Plugins
-#set-option -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
-#run-shell ~/.local/src/tmux-better-mouse-mode/scroll_copy_mode.tmux
-#run-shell ~/.local/src/tmux-copycat/copycat.tmux
+# Plugin
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-open'
+#set -g @plugin 'tmux-plugins/tmux-copycat'
+
+run -b '~/.tmux/plugins/tpm/tpm'
