--- a/.tmux.conf
+++ b/.tmux.conf
@@ -153,7 +153,7 @@ bind-key '?' copy-mode \; send-keys "?"
 bind-key H new-window "htop" \; set-option -w monitor-activity off
 
 # Mode
-set-option -g mode-style bg=brightblack,fg=default
+#set-option -g mode-style bg=brightblack,fg=default
 
 # Status position
 set-option -g status-position bottom
@@ -162,36 +162,36 @@ set-option -g status-position bottom
 set-option -g status-interval 5
 
 # Basic status bar colors
-set-option -g status-style bg=default,fg=white
+#set-option -g status-style bg=default,fg=white
 
 # Left side of status bar
-set-option -g status-left-length 40
-set-option -g status-left "#[fg=default,bg=default] #S #[fg=default,bg=default] "
+#set-option -g status-left-length 40
+#set-option -g status-left "#[fg=default,bg=default] #S #[fg=default,bg=default] "
 
 # Window status
-set-option -g window-status-format "#[fg=white,bg=brightblack] #I #[fg=white,bg=#363636] #W "
-set-option -g window-status-current-format "#[fg=brightwhite,bg=green] #I #[fg=brightwhite,bg=blue] #W "
-set-option -g window-status-separator " "
-set-option -g status-justify left
+#set-option -g window-status-format "#[fg=white,bg=brightblack] #I #[fg=white,bg=#2e3440] #W "
+#set-option -g window-status-current-format "#[fg=brightwhite,bg=green] #I #[fg=brightwhite,bg=blue] #W "
+#set-option -g window-status-separator " "
+#set-option -g status-justify left
 
 # Right side of status bar
-set-option -g status-right-length 50
-set-option -g status-right "#[fg=brightwhite,bg=#363636] %B %_d (%a.) %l:%M %p #[fg=default,bg=default] #(whoami)@#h "
+#set-option -g status-right-length 50
+#set-option -g status-right "#[fg=brightwhite,bg=#2e3440] %B %_d (%a.) %l:%M %p #[fg=default,bg=default] #(whoami)@#h "
 
 # Pane border
-set-option -g pane-border-style bg=default,fg=brightblack
-set-option -g pane-active-border-style bg=default,fg=white
+#set-option -g pane-border-style bg=default,fg=brightblack
+#set-option -g pane-active-border-style bg=default,fg=white
 
 # Pane number indicator
-set-option -g display-panes-colour default
-set-option -g display-panes-active-colour default
+#set-option -g display-panes-colour default
+#set-option -g display-panes-active-colour default
 
 # Clock mode
-set-option -g clock-mode-colour white
-set-option -g clock-mode-style 12
+#set-option -g clock-mode-colour white
+#set-option -g clock-mode-style 12
 
 # Message
-set-option -g message-style bg=default,fg=default
+#set-option -g message-style bg=default,fg=default
 
 # Tmux Lightline
 source-file /home/josh/.tmuxline
@@ -199,7 +199,9 @@ source-file /home/josh/.tmuxline
 # Plugin
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-open'
-#set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'abhinav/tmux-fastcopy'
+set -g @plugin 'schasse/tmux-jump'
 
 run -b '~/.tmux/plugins/tpm/tpm'
