update config files

--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -5,6 +5,7 @@ log_file			"~/.config/mpd/log"
 pid_file			"~/.config/mpd/pid"
 state_file			"~/.config/mpd/state"
 sticker_file		"~/.config/mpd/sticker.sql"
+restore_paused "yes"
 
 input {
         plugin "curl"
