--- a/.tmux.conf
+++ b/.tmux.conf
@@ -164,6 +164,25 @@ set-option -g status-interval 5
 # Basic status bar colors
 #set-option -g status-style bg=default,fg=white
 
+set -g status-justify "centre"
+set -g status "on"
+set -g status-left-style "none"
+set -g message-command-style "fg=#4084D6,bg=#2e3440"
+set -g status-right-style "none"
+set -g pane-active-border-style "fg=#4084D6"
+set -g status-style "none,bg=#2e3440"
+set -g message-style "fg=#4084D6,bg=#2e3440"
+set -g pane-border-style "fg=#2e3440"
+set -g status-right-length "100"
+set -g status-left-length "100"
+setw -g window-status-activity-style "none,fg=#4084D6,bg=#2e3440"
+setw -g window-status-separator ""
+setw -g window-status-style "none,fg=#abb2bf,bg=#2e3440"
+set -g status-left "#[fg=#2e3440,bg=#4084D6,bold] #(whoami)@#H #[fg=#4084D6,bg=#2e3440,nobold,nounderscore,noitalics]#[fg=#4084D6,bg=#2e3440] #S #[fg=#2e3440,bg=#2e3440,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#2e3440,bg=#2e3440,nobold,nounderscore,noitalics]#[fg=#abb2bf,bg=#2e3440] (%a.) %B %e #[fg=#4084D6,bg=#2e3440,nobold,nounderscore,noitalics]#[fg=#2e3440,bg=#4084D6] %l:%M %P "
+setw -g window-status-format "#[fg=#2e3440,bg=#2e3440,nobold,nounderscore,noitalics]#[default] #I #W #[fg=#2e3440,bg=#2e3440,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=#2e3440,bg=#2e3440,nobold,nounderscore,noitalics]#[fg=#4084D6,bg=#2e3440] #I #W #F #[fg=#2e3440,bg=#2e3440,nobold,nounderscore,noitalics]"
+
 # Left side of status bar
 #set-option -g status-left-length 40
 #set-option -g status-left "#[fg=default,bg=default] #S #[fg=default,bg=default] "
@@ -187,14 +206,14 @@ set-option -g status-interval 5
 #set-option -g display-panes-active-colour default
 
 # Clock mode
-#set-option -g clock-mode-colour white
-#set-option -g clock-mode-style 12
+set-option -g clock-mode-colour white
+set-option -g clock-mode-style 12
 
 # Message
 #set-option -g message-style bg=default,fg=default
 
 # Tmux Lightline
-source-file /home/josh/.tmuxline
+#source-file /home/josh/.tmuxline
 
 # Plugin
 set -g @plugin 'tmux-plugins/tpm'
