update config files

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -213,7 +213,7 @@ set-option -g clock-mode-style 12
 #set-option -g message-style bg=default,fg=default
 
 # Tmux Lightline
-#source-file /home/josh/.tmuxline
+source-file /home/josh/.tmuxline
 
 # Plugin
 set -g @plugin 'tmux-plugins/tpm'
@@ -222,5 +222,6 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'abhinav/tmux-fastcopy'
 set -g @plugin 'schasse/tmux-jump'
+set -g @plugin 'KeitaNakamura/neodark.vim'
 
 run -b '~/.tmux/plugins/tpm/tpm'
