add new config files

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -56,7 +56,7 @@ set automatically_count_files true
 set open_all_images true
 
 # Be aware of version control systems and display information.
-set vcs_aware false
+set vcs_aware true
 
 # State of the four backends git, hg, bzr, svn. The possible states are
 # disabled, local (only show local info), enabled (show local and remote
@@ -138,7 +138,7 @@ set show_hidden_bookmarks true
 
 # Which colorscheme to use?  These colorschemes are available by default:
 # default, jungle, snow, solarized
-set colorscheme myscheme
+set colorscheme jungle
 
 # Preview files on the rightmost column?
 # And collapse (shrink) the last column if there is nothing to preview?
