--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,5 @@
 # Default terminal
-#set -g default-terminal "xterm-256color"
-#set-option -g default-terminal "rxvt-256color"
-if-shell "test '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -ge 6 \)'" 'set -g default-terminal "screen-256color"'
-if-shell "test '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -ge 6 \)'" 'set -ga terminal-overrides ",screen-256color:Tc"'
-
-if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 6\) -o #{$TMUX_VERSION_MAJOR} -le 1' 'set -g default-terminal "screen-256color"'
+set -g default-terminal "rxvt-256color"
 
 # Use vim key bindings
 set-option -g mode-keys vi
@@ -155,16 +150,16 @@ bind-key '/' copy-mode \; send-keys "/"
 bind-key '?' copy-mode \; send-keys "?"
 
 # htop
-bind-key H new-window "htop" \; set-option -w monitor-activity off
+#bind-key H new-window "htop" \; set-option -w monitor-activity off
 
 # Mode
-set-option -g mode-style bg=brightblack,fg=default
+#set-option -g mode-style bg=brightblack,fg=default
 
 # Status position
-set-option -g status-position bottom
+#set-option -g status-position bottom
 
 # Status update interval
-set-option -g status-interval 5
+#set-option -g status-interval 5
 
 # Basic status bar colors
 #set-option -g status-style bg=default,fg=white
@@ -192,11 +187,11 @@ set-option -g status-interval 5
 #set-option -g display-panes-active-colour default
 
 # Clock mode
-set-option -g clock-mode-colour white
-set-option -g clock-mode-style 12
+#set-option -g clock-mode-colour white
+#set-option -g clock-mode-style 12
 
 # Message
-set-option -g message-style bg=default,fg=default
+#set-option -g message-style bg=default,fg=default
 
 # Tmux Lightline
 source-file /home/josh/.tmuxline
