--- a/.config/polybar/greywave/config
+++ b/.config/polybar/greywave/config
@@ -4,7 +4,7 @@ include-directory = ~/.config/polybar/greywave/modules
 
 [bar/main]
 monitor = HDMI1
-modules-left = l1 launcher r1 sep l1 bspwm workspaces r1
+modules-left = l1 launcher r1 sep l1 bspwm workspaces r1 sep web files terminal
 modules-center = title 
 modules-right = l1 volume gap network r1 sep l1 filesystem gap memory gap cpu r1 sep l1 dunst sepline powermenu r1 sep
 
@@ -31,6 +31,7 @@ font-4 = Iosevka Nerd Font:style=Regular:size=13;3
 font-5 = NotoSans Nerd Font:style=Regular:size=12;3
 font-6 = Font Awesome 5 Free Solid:style=Solid:size=10;3
 font-7 = NotoSans Nerd Font:style=Regular:size=12;3
+font-8 = Fantasque Sans Mono:size=12;3
 
 enable-ipc = true
 
