fix workspaces in polybar

--- a/.config/polybar/greywave/modules/workspaces.ini
+++ b/.config/polybar/greywave/modules/workspaces.ini
@@ -4,19 +4,18 @@ pin-workspaces = false
 enable-click = true
 enable-scroll = true
 
-icon-0 = 1
-icon-1 = 2
-icon-2 = 3
-icon-3 = 4
-icon-4 = 5
-icon-5 = 6
-icon-default = 
+icon-0 = 1;
+icon-1 = 2;
+icon-2 = 3;
+icon-3 = 4;
+icon-4 = 5;
+icon-default = 
 
 format = <label-state>
-label-active = %icon%
-label-occupied = %icon%
-label-urgent = %icon%
-label-empty = ""
+label-active = 
+label-occupied = 
+label-urgent = 
+label-empty = 
 
 label-occupied-padding = 1
 label-empty-padding = 1
@@ -31,7 +30,7 @@ label-empty-font = 6
 label-active-foreground = ${colors.dark}
 label-urgent-foreground = ${colors.lgrey}
 label-empty-foreground = ${colors.lgrey}
-label-occupied-foreground = ${colors.fg}
+label-occupied-foreground = ${colors.dark}
 
 label-active-background = ${colors.grey}
 label-urgent-background = ${colors.grey}
