--- a/.config/polybar/greywave/modules/powermenu.ini
+++ b/.config/polybar/greywave/modules/powermenu.ini
@@ -5,5 +5,4 @@ content = %{T8}%{F#2e3440}%{T-}%{F-}
 content-background = ${colors.grey}
 content-foreground = ${colors.white}
 
-click-left = "$HOME/.local/bin/powermenu.sh"
-click-right = "$HOME/.local/bin/power"
+click-left = "$HOME/.local/bin/powermenu"
