adding new adjustments to configs

--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -1,3 +1,4 @@
+#music_directory     "smb://192.168.1.118/home/josh/media/music"
 music_directory		"/home/josh/Music"
 playlist_directory	"/home/josh/.config/mpd/playlists"
 db_file			    "/home/josh/.config/mpd/database"
@@ -5,6 +6,18 @@ log_file			"/home/josh/.config/mpd/log"
 pid_file			"/home/josh/.config/mpd/pid"
 state_file			"/home/josh/.config/mpd/state"
 sticker_file		"/home/josh/.config/mpd/sticker.sql"
+
+port                "6600"
+bind_to_address     "127.0.0.1"
+bind_to_address     "192.168.1.120"
+
+restore_paused      "yes"
+auto_update         "yes"
+filesystem_charset  "UTF-8"
+
+zeroconf_enabled    "yes"
+zeroconf_name       "MPD"
+#password           "superman27@read,add,control,admin"
 
 input {
         plugin "curl"
@@ -15,9 +28,34 @@ audio_output {
 	name		"my_fifo"
 	path		"/tmp/mpd.fifo"
 	format		"44100:16:2"
+    mixer_type  "software"
 }
 
 audio_output {
 	type		"pulse"
 	name		"My Pulse Device"
+    server      "127.0.0.1"
 }
+
+audio_output {
+    type        "httpd"
+    name        "MPD"
+    encoder     "lame"
+    port        "5100"
+    bitrate     "128"
+    format      "44100:16:1"
+    always_on   "yes"
+    tags        "yes"
+}
+
+#database {
+#    plugin      "simple"
+#    path        "/home/josh/.config/mpd/database"
+#    cache_directory "/tmp/mpd/mpd.cache"
+#}
+
+#database {
+#    plugin  "proxy"
+#    host    "192.168.1.118"
+#    port    "6600"
+#}
