--- a/.config/polybar/azul/modules/launcher.ini
+++ b/.config/polybar/azul/modules/launcher.ini
@@ -1,8 +1,7 @@
 [module/launcher]
 type = custom/text
 
-click-left = "$HOME/.local/bin/rofi.sh"
-click-right = "$HOME/.config/rofi/launchers/launcher.sh"
+click-left = "$HOME/.local/bin/rofi2.sh"
 
 content = "%{T3}%{F#61afef}%{T-}%{F-}"
 content-padding = 1
