--- a/.config/polybar/azul/modules/notification.ini
+++ b/.config/polybar/azul/modules/notification.ini
@@ -8,6 +8,6 @@ format-overline = ${colors.nord0}
 format-underline = ${colors.nord0}
 
 hook-0 = echo "%{A1:dunstctl set-paused true && polybar-msg hook dunst 2:}%{T5}%{F#61afef}%{T-}%{F-}%{A}" &
-hook-1 = echo "%{A1:dunstctl set-paused false && polybar-msg hook dunst 1:}%{T5}%{F#61afef}%{T-}%{F-}%{A}" &
+hook-1 = echo "%{A1:dunstctl set-paused false && polybar-msg hook dunst 1:}%{T5}%{F#61656E}%{T-}%{F-}%{A}" &
 
 click-right = ~/.local/bin/notificationcenter &
