--- a/.config/polybar/azul/modules/powermenu.ini
+++ b/.config/polybar/azul/modules/powermenu.ini
@@ -1,9 +1,8 @@
 [module/powermenu]
 type = custom/text
 
-content = %{T6}%{F#61afef}%{T-}%{F-}
+content = %{T8}%{F#61afef}%{T-}%{F-}
 content-background = ${colors.nord0}
 content-foreground = ${colors.nord11}
 
-click-left = "$HOME/.local/bin/powermenu.sh"
-click-right = "$HOME/.local/bin/power"
+click-left = "$HOME/.local/bin/powermenu"
