--- a/.config/polybar/azul/modules/utils.ini
+++ b/.config/polybar/azul/modules/utils.ini
@@ -6,6 +6,7 @@ content-background = ${colors.nord0}
 [module/dot]
 type = custom/text
 content = "  "
+content-font = 8
 content-background = ${colors.nord0}
 content-foreground = ${colors.nord}
 
