--- a/.config/polybar/azul/modules/volume.ini
+++ b/.config/polybar/azul/modules/volume.ini
@@ -16,6 +16,6 @@ format-muted-prefix = %{T5}%{F#BF616A}ﱝ %{T-}%{F-}
 format-muted-foreground = ${colors.nord11}
 format-muted-background = ${colors.nord0}
 
-label-muted = %{T6}%{F#D8DEE9}muted%{T-}%{F-}
+label-muted = %{T6}%{F#ff6059}muted%{T-}%{F-}
 
 click-right = pavucontrol
