--- a/.config/polybar/azul/modules/workspaces.ini
+++ b/.config/polybar/azul/modules/workspaces.ini
@@ -4,34 +4,32 @@ pin-workspaces = false
 enable-click = true
 enable-scroll = true
 
-icon-0 = 1
-icon-1 = 2
-icon-2 = 3
-icon-3 = 4
-icon-4 = 5
-icon-5 = 6
-icon-default = 
+icon-0 = 1;☆
+icon-1 = 2;☆
+icon-2 = 3;☆
+icon-3 = 4;☆
+icon-default = ☆
 
 format = <label-state>
-label-active = %icon%
-label-occupied = %icon%
-label-urgent = %icon%
-label-empty = ""
+label-active = ★
+label-occupied = ☆
+label-urgent = ★
+label-empty = %icon%
 
 label-occupied-padding = 1
 label-empty-padding = 1
 label-urgent-padding = 1
 label-active-padding = 1
 
-label-active-font = 6
-label-occupied-font = 6
-label-urgent-font = 6
-label-empty-font = 6
+label-active-font = 9
+label-occupied-font = 9
+label-urgent-font = 9
+label-empty-font = 9
 
 label-active-foreground = ${colors.nord10}
-label-urgent-foreground = ${colors.nord10}
-label-empty-foreground = ${colors.nord3}
-label-occupied-foreground = ${colors.nord4}
+label-urgent-foreground = ${colors.nord11}
+label-empty-foreground = ${colors.nord}
+label-occupied-foreground = ${colors.nord10}
 
 label-active-background = ${colors.nord0}
 label-urgent-background = ${colors.nord0}
