updates to dotfiles

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -54,13 +54,13 @@ glx-copy-from-front = false;
 # Enabled client-side shadows on windows.
 shadow = true;
 # The blur radius for shadows. (set to 20 for good shadow)
-shadow-radius = 8;
+shadow-radius = 15;
 # The left offset for shadows. (set to 5)
-shadow-offset-x = 5;
+shadow-offset-x = 8;
 # The top offset for shadows. (set to 5)
-shadow-offset-y = 5;
+shadow-offset-y = 8;
 # The translucency for shadows. (set to 0.9)
-shadow-opacity = 0.6;
+shadow-opacity = 0.65;
 
 # Set if you want different colour shadows
 # shadow-red = 0.0;
@@ -74,6 +74,7 @@ shadow-exclude = [
     "! name~=''",
     "name = 'Notification'",
     "name = 'Plank'",
+    "name = 'plank'",
     "name = 'Docky'",
     "name = 'Kupfer'",
     "name = 'xfce4-notifyd'",
